# SportsPassport2

./: .dockerignore  .gitignore  CLAUDE.md  FRONTEND_SUMMARY.md  IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  docker-compose.yml  setup.sh  test_debug.py
.claude/: settings.local.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_13_change_to_datetime.py
backend/college_football_tracker/: __init__.py  main.py
backend/college_football_tracker/core/: config.py  dependencies.py  security.py
backend/college_football_tracker/db/: database.py
backend/college_football_tracker/models/: __init__.py  attendance.py  game.py  team.py  user.py  venue.py
backend/college_football_tracker/routers/: admin.py  attendance.py  auth.py  games.py  teams.py
backend/college_football_tracker/schemas/: __init__.py  attendance.py  game.py  team.py  user.py  venue.py
backend/college_football_tracker/services/: cfb_api.py
backend/tests/: conftest.py  test_admin.py  test_attendance.py  test_auth.py  test_games.py  test_teams.py
docs/: deployment.md  frontend.md  requirements.md  testing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: admin.ts  attendance.ts  auth.ts  client.ts  games.ts  teams.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  Games.tsx  Login.tsx  MyGames.tsx  Register.tsx  Statistics.tsx
frontend/src/types/: api.ts
frontend/src/utils/: format.ts
(+10 files in other folders)
