[project]
name = "college-football-tracker"
version = "0.1.0"
description = "College Football Game Tracker API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "python-multipart>=0.0",
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=5.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "email-validator>=2.1",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    # Third-party: starlette's TestClient deprecates httpx in favor of httpx2.
    # Not actionable from our code; only affects the test client.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
]
